finished basic functionality - deleting

--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -12,10 +12,18 @@
 <body>
   <nav></a>
     <div class="navlink"><a href="/logout">Log out</a></div>
+    <div class="navlink"><a id="randomButton" href="/random">Random</a></div>
+    <div class="navlink"><a id="searchButton" href="/search">Search</a></div>
+    <div class="navlink"><a id="submitButton" href="/submit">Submit</a></div>
+    <div class="navlink"><a id="adminButton" href="/admin">Admin</a></div>
   </nav>
   <section id="makeNPC">
   </section>
+  <section id="searchBar">
+  </section>
   <section id="NPCs">
+  </section>
+  <section id="success">
   </section>
   <script src="/assets/bundle.js"></script>
 </body>
