--- a/hosted/style.css
+++ b/hosted/style.css
@@ -1,9 +1,15 @@
+
+
 html, body {
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+}
+
+body {
+    background-color: grey;
 }
 
 #logo {
@@ -17,7 +23,7 @@ html, body {
 nav {
     width: 100%;
     height: 50px;
-    background-color: #55acee;
+    background-color: #c73032;
 }
 
 nav:nth-child(1) {
@@ -38,27 +44,27 @@ nav:nth-child(1) {
     text-decoration: none;
     padding: 5px;
     border-radius: 4px;
-    background-color: #55acee;
+    background-color: #c73032;
     transition: background-color 0.4s ease;
 }
 
 .navlink a:hover {
     transition: background-color 0.8s ease;
-    background-color: #66bdff;
+    background-color: #930C10;
 }
 
-.domoForm {
-    border: 2px solid #338acc;
+.npcForm {
+    border: 2px solid #930C10;
     height: 35px;
     width: 700px;
     margin-top:0px;
     padding-top:10px;
-    background-color: #55acee;
+    background-color: #c73032;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
 }
 
-.domoForm label {
+.npcForm label {
     display: inline-block;
     width: 75px;
     margin-left: 10px;
@@ -67,27 +73,27 @@ nav:nth-child(1) {
     color: white;
 }
 
-.domoForm input[type=text] {
+.npcForm input[type=text] {
     float:left;
 }
 
-.makeDomoSubmit {
+.makeNPCSubmit {
     transition: background-color 0.4s ease;
     display: inline;
     width: 90px;
-    background-color: #55acee;
+    background-color: #c73032;
     border-radius: 2px;
     color: white;
     text-decoration: none;
 }
 
-.makeDomoSubmit:link, .makeDomoSubmit:visited, .makeDomoSubmit:hover, .makeDomoSubmit:active {
+.makeNPCSubmit:link, .makeNPCSubmit:visited, .makeNPCSubmit:hover, .makeNPCSubmit:active {
     color: white;
 }
 
-.makeDomoSubmit:hover {
+.makeNPCSubmit:hover {
     transition: background-color 0.4s ease;
-    background-color: #338acc;
+    background-color: #930C10;
 }
 
 .mainForm {
@@ -118,9 +124,9 @@ nav:nth-child(1) {
     margin-top: 14px;
     font-size: 1.2em;
     width: 100px;
-    background-color: #55acee;
+    background-color: #c73032;
     border-radius: 2px;
-    border-color: #66acee;
+    border-color: #930C10;
     padding: 3px 0px;
     color: white;
     text-decoration: none;
@@ -132,7 +138,7 @@ nav:nth-child(1) {
 
 .formSubmit:hover {
     transition: background-color 0.4s ease;
-    background-color: #338acc;
+    background-color: #930C10;
 }
 
 #user, #pass, #pass2 {
@@ -144,10 +150,10 @@ nav:nth-child(1) {
 
 #user:focus, #pass:focus, #pass2:focus {
     outline: none;
-    box-shadow: 0px 0px 1px 1px #55acee;
+    box-shadow: 0px 0px 1px 1px #c73032;
 }
 
-#domoMessage {
+#npcMessage {
     display:none;
     top: 250px;
     width: 250px;
@@ -158,7 +164,7 @@ nav:nth-child(1) {
     overflow: hidden;
 }
 
-#domoMessage h3 {
+#npcMessage h3 {
     width: 200px;
     position: absolute;
     top: 0px;
@@ -174,11 +180,11 @@ nav:nth-child(1) {
 #errorMessage {
     font-size: 1.2em;
     font-weight: bold;
-    color: red;
+    color: #c73032;
     font-style: italic;
 }
 
-#domo {
+#NPC {
     z-index: 225;
     margin-top: -20px;
     margin-left: 135px;
@@ -189,46 +195,35 @@ nav:nth-child(1) {
     transform: rotate(330deg);
 }
 
-#domos {
+#NPCs {
     width: 40%;
     min-width: 400px;
-    border: 2px solid #55acee;
     border-radius: 4px;
     margin: 0 auto;
     margin-top: 100px;
 }
 
-.domo {
+.NPC {
     width: 95%;
     margin: 0 auto;
     margin-top: 2px;
     margin-bottom: 2px;
-    border: 2px solid #55acee;
+    border: 2px solid #c73032;
     border-radius: 4px;
-    background-color: #55acee;
+    background-color: #c73032;
     padding: 10px;
     min-height:60px;
     overflow: hidden;
 }
 
-.domo:hover {
+.NPC:hover {
     transition: border-color 0.2s ease-out;
     border-color: rgba(255,255,255, 0.8);
     transition: background-color 2.6s ease-out;
-    background-color: #66bfff;
+    background-color: #930C10;
 }
 
-img.domoFace {
-    margin-left: 25px;
-    margin-right: 10px;
-    height: 50px;
-    width: 50px;
-    border-radius: 4px;
-    margin-top:10px;
-    float:left;
-}
-
-h3.emptyDomo {
+h3.emptyNPC {
     width: 400px;
     font-size: 1.5em;
     margin: 0 auto;
@@ -236,27 +231,10 @@ h3.emptyDomo {
     margin-top: 18px;
 }
 
-h3.domoName {
-    float:left;
-    width: 200px;
-    font-weight: bold;
-    padding-left: 65px;
-    font-size: 1.5em;
-}
-
-h3.domoAge {
-    float:right;
-    text-align: left;
-    width: 100px;
-    font-weight: bold;
-    padding-right: 40px;
-    font-size: 1.5em;
-}
-
-.domo:first-child {
+.NPC:first-child {
     margin-top: 10px;
 }
 
-.domo:last-child {
+.NPC:last-child {
     margin-bottom:10px;
 }
