--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,22 +1,28 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>NPC Maker</title>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
 </head>
-<body> 
+<body>
+  <img class="logo" src="assets/img/dndBlack.png">
+  <h1 class = "title">NPC Maker</h1>
   <nav>
     <div class="navlink"><a id="loginButton" href="/login">Login</a></div>
     <div class="navlink"><a id="signupButton" href="/signup">Sign up</a></div>
   </nav>
-  <section id="content"></section>
-  <div id="npcMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
-    <h3><span id="errorMessage">Wrong username or password</span></h3>
+  <section class="main">
+    <img class ="ad" src = "/assets/img/advertisement.png">
+    <section id="content"></section>
+    <img class="ad" src = "/assets/img/advertisement.png">
+  </section>
+  <div id="npcMessage">
+    <h3><span id="errorMessage"></span></h3>
   </div>
   <script src="/assets/loginBundle.js"></script>
 </body>
